<resources>
    <string name="app_name">banco</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_act_cad_contatos">Contatos</string>
    <string name="txv_nome">Nome</string>
    <string name="txv_telefone">Telefone</string>
    <string name="txv_email">E-mail</string>
    <string name="txv_endereco">Endereço</string>
    <string name="txv_datasespeciais">Datas Especiais</string>
    <string name="txv_grupos">Grupos</string>
</resources>
